[gd_scene load_steps=5 format=3 uid="uid://dvulyu0vmnbcg"]

[ext_resource type="Script" path="res://Pig/pig.gd" id="1_0mka8"]
[ext_resource type="Texture2D" uid="uid://sijo761smvfo" path="res://assets/Pigs/Pig.png" id="1_nw80g"]

[sub_resource type="Curve2D" id="Curve2D_61o2s"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -40, 0, 0, 0, 0, 0, 216, 0, 0, 0, 0, 0, -40, 0)
}
point_count = 3

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_c5hgu"]
radius = 15.0
height = 58.0

[node name="Pig" type="Node2D" groups=["Pigs"]]
script = ExtResource("1_0mka8")

[node name="Path2D" type="Path2D" parent="."]
position = Vector2(-88, 0)
curve = SubResource("Curve2D_61o2s")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2(-40, 0)
rotates = false

[node name="Area2D" type="Area2D" parent="Path2D/PathFollow2D"]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Path2D/PathFollow2D/Area2D"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_c5hgu")

[node name="Pig" type="Sprite2D" parent="Path2D/PathFollow2D/Area2D"]
texture = ExtResource("1_nw80g")
offset = Vector2(-1.66, -4.71)

[node name="LeftBorder" type="Marker2D" parent="."]
position = Vector2(-128, 0)

[node name="RightBorder" type="Marker2D" parent="."]
position = Vector2(128, 0)

[connection signal="body_entered" from="Path2D/PathFollow2D/Area2D" to="." method="_on_area_2d_body_entered"]
